<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:id="@+id/dialog_common_confirm_textViewWrapper"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/dialog_common_confirm_text_view">

        <TextView
            android:id="@+id/dialog_common_confirm_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/placeholderConfirm"
            android:textColor="@color/colorOne"
            android:textSize="15dp" />

    </RelativeLayout>

    <View
        android:id="@+id/dialog_common_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/dialog_common_confirm_textViewWrapper"
        android:background="@color/colorTen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/dialog_common_divider"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/dialog_common_confirm_cancelButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_common_confirm_cancel_button"
            android:text="@string/buttonCancel"
            android:textColor="@color/colorOne"
            android:textSize="15dp" />

        <Button
            android:id="@+id/dialog_common_confirm_confirmButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_common_confirm_confirm_button"
            android:text="@string/buttonConfirm"
            android:textColor="#fff"
            android:textSize="15dp" />

    </LinearLayout>


</RelativeLayout>
